examples/example_8/example_8.v
Require Import D.

Fail Check A.mA.axA.
